License, readme and register user post otp
